@@ -14,12 +14,17 @@
 
 package com.starrocks.sql.optimizer;
 
+import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import com.starrocks.analysis.JoinOperator;
 import com.starrocks.catalog.ColocateTableIndex;
+import com.starrocks.catalog.Column;
+import com.starrocks.catalog.IcebergTable;
 import com.starrocks.catalog.system.SystemTable;
+import com.starrocks.connector.BucketProperty;
+import com.starrocks.qe.ConnectContext;
 import com.starrocks.server.GlobalStateMgr;
 import com.starrocks.sql.optimizer.base.CTEProperty;
 import com.starrocks.sql.optimizer.base.ColumnRefSet;
@@ -30,6 +35,7 @@ import com.starrocks.sql.optimizer.base.EmptyDistributionProperty;
 import com.starrocks.sql.optimizer.base.EmptySortProperty;
 import com.starrocks.sql.optimizer.base.EquivalentDescriptor;
 import com.starrocks.sql.optimizer.base.HashDistributionDesc;
+import com.starrocks.sql.optimizer.base.HashDistributionDescBP;
 import com.starrocks.sql.optimizer.base.HashDistributionSpec;
 import com.starrocks.sql.optimizer.base.PhysicalPropertySet;
 import com.starrocks.sql.optimizer.base.SortProperty;
@@ -39,9 +45,12 @@ import com.starrocks.sql.optimizer.operator.physical.PhysicalAssertOneRowOperato
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEAnchorOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEConsumeOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEProduceOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalExceptOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalFilterOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashAggregateOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashJoinOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalIcebergScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalIntersectOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalJDBCScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalJoinOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalLimitOperator;
@@ -53,8 +62,10 @@ import com.starrocks.sql.optimizer.operator.physical.PhysicalOlapScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalProjectOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalRepeatOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalSchemaScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalSetOperation;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTableFunctionOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTopNOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalUnionOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalValuesOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalWindowOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ColumnRefOperator;
@@ -65,13 +76,16 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.google.common.base.Preconditions.checkState;
+import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.LOCAL;
 import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.SHUFFLE_AGG;
 import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.SHUFFLE_JOIN;
 
@@ -134,7 +148,6 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
 
         EquivalentDescriptor leftDesc = leftScanDistributionSpec.getEquivDesc();
         EquivalentDescriptor rightDesc = rightScanDistributionSpec.getEquivDesc();
-
 
         ColocateTableIndex colocateIndex = GlobalStateMgr.getCurrentState().getColocateTableIndex();
         long leftTableId = leftDesc.getTableId();
@@ -203,6 +216,87 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         }
 
         return physicalPropertySet;
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalUnion(PhysicalUnionOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalExcept(PhysicalExceptOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalIntersect(PhysicalIntersectOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    private PhysicalPropertySet processPhysicalSetOperation(PhysicalSetOperation node, ExpressionContext context) {
+        DistributionSpec inputDistSpec = childrenOutputProperties.get(0).getDistributionProperty().getSpec();
+        if (inputDistSpec.getType().equals(DistributionSpec.DistributionType.ROUND_ROBIN)) {
+            return visitOperator(node, context);
+        }
+
+        if (!(inputDistSpec instanceof HashDistributionSpec)) {
+            return visitOperator(node, context);
+        }
+
+        HashDistributionSpec inputHashDistSpec = (HashDistributionSpec) inputDistSpec;
+        HashDistributionDesc inputHashDistDesc = inputHashDistSpec.getHashDistributionDesc();
+
+        if (inputHashDistDesc.isLocal()) {
+            List<DistributionCol> inputColumns = node.getChildOutputColumns().get(0)
+                    .stream()
+                    .map(col -> new DistributionCol(col.getId(), true))
+                    .collect(Collectors.toList());
+
+            List<DistributionCol> outputColumns = node.getOutputColumnRefOp()
+                    .stream()
+                    .map(col -> new DistributionCol(col.getId(), true))
+                    .collect(Collectors.toList());
+
+            List<List<DistributionCol>> outputShuffleColumns = Lists.newArrayList();
+            for (int i = 0; i < inputHashDistDesc.getDistributionCols().size(); ++i) {
+                DistributionCol inputCol = inputHashDistDesc.getDistributionCols().get(i);
+                List<DistributionCol> outputShuffleCols = IntStream.range(0, inputColumns.size())
+                        .filter(k -> inputHashDistSpec.getEquivDesc().isConnected(inputCol, inputColumns.get(k)))
+                        .mapToObj(outputColumns::get)
+                        .collect(Collectors.toList());
+                outputShuffleColumns.add(outputShuffleCols);
+            }
+            Preconditions.checkArgument(outputShuffleColumns.stream().allMatch(cols -> cols.size() > 0));
+            List<Integer> columnIds = outputShuffleColumns.stream()
+                    .map(cols -> cols.get(0).getColId())
+                    .collect(Collectors.toList());
+
+            HashDistributionDesc hashDistDesc = new HashDistributionDesc(columnIds, LOCAL);
+            EquivalentDescriptor equivalentDescriptor = new EquivalentDescriptor(
+                    inputHashDistSpec.getEquivDesc().getTableId(), inputHashDistSpec.getEquivDesc().getPartitionIds());
+
+            List<DistributionCol> shuffleColumns = outputShuffleColumns.stream()
+                    .map(cols -> cols.get(0))
+                    .collect(Collectors.toList());
+
+            equivalentDescriptor.initDistributionUnionFind(shuffleColumns);
+            outputShuffleColumns.forEach(columns -> columns.stream().skip(1)
+                    .forEach(col -> equivalentDescriptor.unionDistributionCols(columns.get(0), col)));
+
+            HashDistributionSpec hashDistSpec = new HashDistributionSpec(hashDistDesc, equivalentDescriptor);
+            PhysicalPropertySet propertySet =
+                    new PhysicalPropertySet(DistributionProperty.createProperty(hashDistSpec));
+            return mergeCTEProperty(propertySet);
+        } else {
+            List<Integer> columnIds = node.getOutputColumnRefOp().stream()
+                    .map(ColumnRefOperator::getId)
+                    .collect(Collectors.toList());
+            HashDistributionDesc hashDistDesc = new HashDistributionDesc(columnIds, SHUFFLE_JOIN);
+            HashDistributionSpec hashDistSpec = DistributionSpec.createHashDistributionSpec(hashDistDesc);
+            PhysicalPropertySet propertySet =
+                    new PhysicalPropertySet(DistributionProperty.createProperty(hashDistSpec));
+            return mergeCTEProperty(propertySet);
+        }
     }
 
     @Override
@@ -400,6 +494,60 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         }
     }
 
+    private Optional<HashDistributionDesc> computeLakeHashDistributionDesc(HashDistributionDesc require,
+                                                                           List<BucketProperty> bucketProperties,
+                                                                           Map<ColumnRefOperator, Column> map) {
+        ColumnRefSet requireColumnRefSet = ColumnRefSet.createByIds(
+                require.getDistributionCols().stream().map(DistributionCol::getColId).toList());
+
+        List<Integer> bucketColumnIds = new ArrayList<>();
+        Map<Integer, Integer> id2Index = new HashMap<>();
+        for (int i = 0; i < bucketProperties.size(); i++) {
+            Column column = bucketProperties.get(i).getColumn();
+            for (Map.Entry<ColumnRefOperator, Column> entry : map.entrySet()) {
+                if (entry.getKey().getName().equals(column.getName())) {
+                    bucketColumnIds.add(entry.getKey().getId());
+                    id2Index.put(entry.getKey().getId(), i);
+                    break;
+                }
+            }
+        }
+        ColumnRefSet bucketColumnRefSet = ColumnRefSet.createByIds(bucketColumnIds);
+        requireColumnRefSet.intersect(bucketColumnRefSet);
+        if (requireColumnRefSet.isEmpty()) {
+            return Optional.empty();
+        } else {
+            // respect the order of column shuffle
+            List<BucketProperty> usedBP = require.getDistributionCols().stream()
+                    .map(DistributionCol::getColId).filter(requireColumnRefSet::contains)
+                    .map(id2Index::get).map(bucketProperties::get).toList();
+            return Optional.of(new HashDistributionDescBP(
+                    requireColumnRefSet.getStream().toList(), LOCAL, usedBP));
+        }
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalIcebergScan(PhysicalIcebergScanOperator node, ExpressionContext context) {
+        // according bucket properties to compute distribution that meet requirement
+        DistributionSpec distributionSpec = requirements.getDistributionProperty().getSpec();
+        if (ConnectContext.get().getSessionVariable().isEnableBucketAwareExecutionOnLake() &&
+                distributionSpec instanceof HashDistributionSpec hashDistribution) {
+            IcebergTable table = (IcebergTable) node.getTable();
+            if (table.hasBucketProperties()) {
+                List<BucketProperty> properties = table.getBucketProperties();
+                Optional<HashDistributionDesc> hashDistributionDesc = computeLakeHashDistributionDesc(
+                        hashDistribution.getHashDistributionDesc(), properties, node.getColRefToColumnMetaMap());
+                if (hashDistributionDesc.isPresent()) {
+                    HashDistributionDesc nullStrictDesc = hashDistributionDesc.get().getNullStrictDesc();
+                    return createPropertySetByDistribution(new HashDistributionSpec(nullStrictDesc));
+                }
+            }
+            LOG.debug("table name: " + node.getTable().getName() + ", requirement distribution type: " +
+                    distributionSpec.toString());
+        }
+        return mergeCTEProperty(PhysicalPropertySet.EMPTY);
+    }
+
     @Override
     public PhysicalPropertySet visitPhysicalTopN(PhysicalTopNOperator topN, ExpressionContext context) {
         PhysicalPropertySet outputProperty;
@@ -433,15 +581,15 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         List<Integer> partitionColumnRefSet = new ArrayList<>();
 
         node.getPartitionExpressions().forEach(e -> partitionColumnRefSet.addAll(
-                Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().collect(Collectors.toList())));
+                Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().toList()));
 
-        SortProperty sortProperty = SortProperty.createProperty(node.getEnforceOrderBy());
+        SortProperty sortProperty = SortProperty.createProperty(node.getEnforceOrderBy(), partitionColumnRefSet);
 
         DistributionProperty distributionProperty;
         if (partitionColumnRefSet.isEmpty()) {
             distributionProperty = DistributionProperty.createProperty(DistributionSpec.createGatherDistributionSpec());
         } else {
-            // Use child distribution
+            // Use child's distribution
             distributionProperty = childrenOutputProperties.get(0).getDistributionProperty();
         }
         return new PhysicalPropertySet(distributionProperty, sortProperty,
@@ -526,7 +674,6 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
     public PhysicalPropertySet visitPhysicalValues(PhysicalValuesOperator node, ExpressionContext context) {
         return createGatherPropertySet();
     }
-
 
     private void updatePropertyWithProjection(Projection projection, PhysicalPropertySet oldProperty) {
         if (projection == null) {
