@@ -48,6 +48,7 @@ import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import static com.starrocks.catalog.ExpressionRangePartitionInfo.SHADOW_PARTITION_PREFIX;
 import static com.starrocks.statistic.StatsConstants.STATISTIC_AUTO_COLLECT_INTERVAL;
 
 public class StatisticsCollectJobFactory {
@@ -112,7 +113,8 @@ public class StatisticsCollectJobFactory {
                                                                  StatsConstants.ScheduleType scheduleType,
                                                                  Map<String, String> properties,
                                                                  List<StatsConstants.StatisticsType> statisticsTypes,
-                                                                 List<List<String>> columnGroup) {
+                                                                 List<List<String>> columnGroup,
+                                                                 boolean isManualJob) {
         if (CollectionUtils.isEmpty(columnNames)) {
             columnNames = StatisticUtils.getCollectibleColumns(table);
             columnTypes = columnNames.stream().map(col -> table.getColumn(col).getType()).collect(Collectors.toList());
@@ -122,16 +124,20 @@ public class StatisticsCollectJobFactory {
             columnTypes = columnNames.stream().map(col -> table.getColumn(col).getType()).collect(Collectors.toList());
         }
 
+        partitionIdList = (partitionIdList == null)
+                ? table.getPartitions().stream()
+                .filter(partition -> partition.hasData() && !partition.getName().startsWith(SHADOW_PARTITION_PREFIX))
+                .map(Partition::getId)
+                .collect(Collectors.toList())
+                : partitionIdList.stream()
+                .filter(id -> !table.getPartition(id).getName().startsWith(SHADOW_PARTITION_PREFIX))
+                .collect(Collectors.toList());
+
         LOG.debug("statistics job work on table: {}, type: {}", table.getName(), analyzeType.name());
         if (analyzeType.equals(StatsConstants.AnalyzeType.SAMPLE) && statisticsTypes.isEmpty()) {
-            if (partitionIdList == null) {
-                partitionIdList = table.getPartitions().stream().filter(Partition::hasData)
-                        .map(Partition::getId).collect(Collectors.toList());
-            }
-            
             if (Config.statistic_use_meta_statistics) {
                 return new HyperStatisticsCollectJob(db, table, partitionIdList, columnNames, columnTypes,
-                        StatsConstants.AnalyzeType.SAMPLE, scheduleType, properties);
+                        StatsConstants.AnalyzeType.SAMPLE, scheduleType, properties, isManualJob);
             } else {
                 return new SampleStatisticsCollectJob(db, table, columnNames, columnTypes,
                         StatsConstants.AnalyzeType.SAMPLE, scheduleType, properties);
@@ -139,24 +145,14 @@ public class StatisticsCollectJobFactory {
         } else if (analyzeType.equals(StatsConstants.AnalyzeType.HISTOGRAM)) {
             return new HistogramStatisticsCollectJob(db, table, columnNames, columnTypes, scheduleType, properties);
         } else if (analyzeType.equals(StatsConstants.AnalyzeType.FULL) && statisticsTypes.isEmpty()) {
-            if (partitionIdList == null) {
-                partitionIdList = table.getPartitions().stream().filter(Partition::hasData)
-                        .map(Partition::getId).collect(Collectors.toList());
-            }
-
             if (Config.statistic_use_meta_statistics) {
                 return new HyperStatisticsCollectJob(db, table, partitionIdList, columnNames, columnTypes,
-                        StatsConstants.AnalyzeType.FULL, scheduleType, properties);
+                        StatsConstants.AnalyzeType.FULL, scheduleType, properties, isManualJob);
             } else {
                 return new FullStatisticsCollectJob(db, table, partitionIdList, columnNames, columnTypes,
                         StatsConstants.AnalyzeType.FULL, scheduleType, properties);
             }
         } else {
-            if (partitionIdList == null) {
-                partitionIdList = table.getPartitions().stream().filter(Partition::hasData)
-                        .map(Partition::getId).collect(Collectors.toList());
-            }
-
             return new MultiColumnHyperStatisticsCollectJob(db, table, partitionIdList, columnNames, columnTypes,
                     analyzeType, scheduleType, properties, statisticsTypes, columnGroup);
         }
@@ -341,7 +337,7 @@ public class StatisticsCollectJobFactory {
                     GlobalStateMgr.getCurrentState().getStatisticStorage()
                             .getConnectorTableStatisticsSync(table, columnNames);
             List<ConnectorTableColumnStats> validColumnStatistics = columnStatisticList.stream().
-                    filter(columnStatistic -> !columnStatistic.isUnknown()).collect(Collectors.toList());
+                    filter(columnStatistic -> !columnStatistic.isUnknown()).toList();
 
             // use small table row count as default table row count
             long tableRowCount = Config.statistic_auto_collect_small_table_rows - 1;
@@ -423,10 +419,19 @@ public class StatisticsCollectJobFactory {
 
     private static void createJob(List<StatisticsCollectJob> allTableJobMap, NativeAnalyzeJob job,
                                   Database db, Table table, List<String> columnNames, List<Type> columnTypes) {
+        // catch exceptions because it may fail to query the predicate_columns
+        try {
+            createJobImpl(allTableJobMap, job, db, table, columnNames, columnTypes);
+        } catch (Throwable e) {
+            LOG.warn("create statistics job failed db={} table={} columns={}", db, table, columnNames, e);
+        }
+    }
+
+    private static void createJobImpl(List<StatisticsCollectJob> allTableJobMap, NativeAnalyzeJob job,
+                                      Database db, Table table, List<String> columnNames, List<Type> columnTypes) {
         if (table == null || !table.isNativeTableOrMaterializedView()) {
             return;
         }
-
         if (table instanceof OlapTable) {
             if (((OlapTable) table).getState() != OlapTable.OlapTableState.NORMAL) {
                 return;
@@ -453,13 +458,13 @@ public class StatisticsCollectJobFactory {
                 return;
             }
         }
-
         double healthy = 0;
         AnalyzeMgr analyzeMgr = GlobalStateMgr.getCurrentState().getAnalyzeMgr();
         BasicStatsMeta basicStatsMeta = analyzeMgr.getTableBasicStatsMeta(table.getId());
         List<HistogramStatsMeta> histogramStatsMetas = analyzeMgr.getHistogramMetaByTable(table.getId());
-        boolean useBasicStats = job.getAnalyzeType() == StatsConstants.AnalyzeType.SAMPLE ||
-                job.getAnalyzeType() == StatsConstants.AnalyzeType.FULL;
+        StatsConstants.AnalyzeType analyzeType = job.getAnalyzeType();
+        boolean useBasicStats = analyzeType == StatsConstants.AnalyzeType.SAMPLE ||
+                analyzeType == StatsConstants.AnalyzeType.FULL;
         LocalDateTime tableUpdateTime = StatisticUtils.getTableLastUpdateTime(table);
         LocalDateTime statsUpdateTime = LocalDateTime.MIN;
         boolean isInitJob = true;
@@ -483,9 +488,9 @@ public class StatisticsCollectJobFactory {
                 Config.statistic_auto_collect_predicate_columns_threshold > 0 &&
                 CollectionUtils.isEmpty(columnNames) && table.isNativeTableOrMaterializedView()) {
             List<ColumnUsage> predicateColumns = PredicateColumnsMgr.getInstance().queryPredicateColumns(tableName);
-            if (CollectionUtils.isNotEmpty(predicateColumns) && predicateColumns.size() < numColumns) {
+            if (CollectionUtils.isNotEmpty(predicateColumns) && predicateColumns.size() <= numColumns) {
                 OlapTable olap = (OlapTable) table;
-                predicateColNames = predicateColumns.stream().map(x -> x.getOlapColumnName(olap)).toList();
+                predicateColNames = predicateColumns.stream().flatMap(x -> x.getOlapColumnName(olap).stream()).toList();
                 existsPredicateColumns = true;
                 if (numColumns > Config.statistic_auto_collect_predicate_columns_threshold) {
                     enablePredicateColumnStrategy = true;
@@ -526,7 +531,7 @@ public class StatisticsCollectJobFactory {
             }
 
             long defaultInterval =
-                    job.getAnalyzeType() == StatsConstants.AnalyzeType.HISTOGRAM ?
+                    analyzeType == StatsConstants.AnalyzeType.HISTOGRAM ?
                             Config.statistic_auto_collect_histogram_interval :
                             (sumDataSize > Config.statistic_auto_collect_small_table_size ?
                                     Config.statistic_auto_collect_large_table_interval :
@@ -542,7 +547,7 @@ public class StatisticsCollectJobFactory {
             }
 
             // 4. frequent-update big table without predicate column, choose sample strategy to collect statistics
-            if (job.getAnalyzeType() != StatsConstants.AnalyzeType.HISTOGRAM &&
+            if (analyzeType != StatsConstants.AnalyzeType.HISTOGRAM &&
                     healthy < Config.statistic_auto_collect_sample_threshold &&
                     sumDataSize > Config.statistic_auto_collect_small_table_size) {
                 if (!(Config.statistic_auto_collect_use_full_predicate_column_for_sample && existsPredicateColumns &&
@@ -559,6 +564,7 @@ public class StatisticsCollectJobFactory {
                     return;
                 } else {
                     enablePredicateColumnStrategy = true;
+                    analyzeType = StatsConstants.AnalyzeType.FULL;
                 }
             }
         }
@@ -570,17 +576,14 @@ public class StatisticsCollectJobFactory {
 
         StatisticsCollectJob.Priority priority =
                 new StatisticsCollectJob.Priority(tableUpdateTime, statsUpdateTime, healthy);
-        LOG.debug("statistics job work on un-health table: {}, healthy: {}, Type: {}", table.getName(), healthy,
-                job.getAnalyzeType());
-        if (job.getAnalyzeType().equals(StatsConstants.AnalyzeType.SAMPLE)) {
+        if (analyzeType.equals(StatsConstants.AnalyzeType.SAMPLE)) {
             createSampleStatsJob(allTableJobMap, job, db, table, columnNames, columnTypes, priority);
-        } else if (job.getAnalyzeType().equals(StatsConstants.AnalyzeType.HISTOGRAM)) {
+        } else if (analyzeType.equals(StatsConstants.AnalyzeType.HISTOGRAM)) {
             createHistogramJob(allTableJobMap, job, db, table, columnNames, columnTypes, priority);
-        } else if (job.getAnalyzeType().equals(StatsConstants.AnalyzeType.FULL)) {
+        } else if (analyzeType.equals(StatsConstants.AnalyzeType.FULL)) {
             createFullStatsJob(allTableJobMap, job, basicStatsMeta, db, table, columnNames, columnTypes, priority);
         } else {
-            throw new StarRocksPlannerException("Unknown analyze type " + job.getAnalyzeType(),
-                    ErrorType.INTERNAL_ERROR);
+            throw new StarRocksPlannerException("Unknown analyze type " + analyzeType, ErrorType.INTERNAL_ERROR);
         }
     }
 
@@ -604,7 +607,7 @@ public class StatisticsCollectJobFactory {
         }
 
         StatisticsCollectJob sample = buildStatisticsCollectJob(db, table, partitionIdList, columnNames, columnTypes,
-                StatsConstants.AnalyzeType.SAMPLE, job.getScheduleType(), job.getProperties(), List.of(), List.of());
+                StatsConstants.AnalyzeType.SAMPLE, job.getScheduleType(), job.getProperties(), List.of(), List.of(), false);
         sample.setPriority(priority);
         allTableJobMap.add(sample);
     }
@@ -613,7 +616,7 @@ public class StatisticsCollectJobFactory {
                                            Database db, Table table, List<String> columnNames,
                                            List<Type> columnTypes, StatisticsCollectJob.Priority priority) {
         StatisticsCollectJob sample = buildStatisticsCollectJob(db, table, null, columnNames, columnTypes,
-                StatsConstants.AnalyzeType.HISTOGRAM, job.getScheduleType(), job.getProperties(), List.of(), List.of());
+                StatsConstants.AnalyzeType.HISTOGRAM, job.getScheduleType(), job.getProperties(), List.of(), List.of(), false);
         sample.setPriority(priority);
         allTableJobMap.add(sample);
     }
@@ -625,7 +628,7 @@ public class StatisticsCollectJobFactory {
         StatsConstants.AnalyzeType analyzeType;
         List<Partition> partitionList = table.getPartitions().stream()
                 .filter(partition -> !StatisticUtils.isPartitionStatsHealthy(table, partition, stats))
-                .collect(Collectors.toList());
+                .toList();
 
         long totalDataSize = partitionList.stream().mapToLong(Partition::getDataSize).sum();
         if (job.isDefaultJob() && totalDataSize > Config.statistic_max_full_collect_data_size) {
@@ -639,7 +642,7 @@ public class StatisticsCollectJobFactory {
         if (!partitionList.isEmpty()) {
             StatisticsCollectJob statisticsCollectJob = buildStatisticsCollectJob(db, table,
                     partitionList.stream().map(Partition::getId).collect(Collectors.toList()), columnNames, columnTypes,
-                    analyzeType, job.getScheduleType(), Maps.newHashMap(), List.of(), List.of());
+                    analyzeType, job.getScheduleType(), Maps.newHashMap(), List.of(), List.of(), false);
             statisticsCollectJob.setPriority(priority);
             allTableJobMap.add(statisticsCollectJob);
         }
